--- a/playbooks/templates/device_state_snapshot/ospf_neighbors.j2
+++ b/playbooks/templates/device_state_snapshot/ospf_neighbors.j2
@@ -7,5 +7,5 @@ Neighbor ID, Pri, State, Dead Time, Address, Interface
 {% endfor %}
 {% else %}
 Neighbor ID, Pri, State, Dead Time, Address, Interface
-No ARP entries found.
+No OSPF neighbors found.
 {% endif %}
