--- a/playbooks/templates/device_state_snapshot/bgp_neighbors.j2
+++ b/playbooks/templates/device_state_snapshot/bgp_neighbors.j2
@@ -1,10 +1,14 @@
 #jinja2: lstrip_blocks: True, trim_blocks: True
-{% if bgp_neighbors.stdout_lines[0][0] %}
 show ip bgp summary
-{% for line in bgp_neighbors.stdout_lines[0] %}
+{% if bgp_neighbors.skip_reason is not defined %}
+{% set bgp_neighbors_lines = bgp_neighbors.stdout_lines[0] %}
+{% if bgp_neighbors_lines[0] %}
+{% for line in bgp_neighbors_lines %}
 {{ line | replace(",", ";") }}
 {% endfor %}
 {% else %}
-show ip bgp summary
 No BGP neighbors found.
+{% endif %}
+{% else %}
+BGP is disabled.
 {% endif %}
