--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -15,35 +15,60 @@ Mist Wireless: {% if mist_store %}Yes{% else %}No{% endif +%}
 ##### Store Analysis ##############################
 
 Store Switch:
+{% if store_switch_ping.stdout %}
 {% if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
   Pingable: Yes
 {% else %}
   Pingable: No
 {% endif %}
+{% else %}
+  Pingable: N/A
+{% endif %}
+{% if store_switch_uptime.stdout_lines %}
   Uptime: {{ store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") }}
+{% else %}
+  Uptime: N/A
+{% endif %}
 Store Router:
+{% if store_router_ping.stdout %}
 {% if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
   Pingable: Yes
 {% else %}
   Pingable: No
 {% endif %}
+{% else %}
+  Pingable: N/A
+{% endif %}
+{% if store_subnet_lookup.stdout_lines %}
 {% if store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=False, ignorecase=False) %}
 MPLS Path: Up
 {% else %}
 MPLS Path: Down
 {% endif %}
+{% else %}
+MPLS Path: N/A
+{% endif %}
 {% if not sdwan_store %}
+{% if store_bb_tunnel_status.stdout %}
 {% if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) %}
 Broadband Tunnel: Up
 {% else %}
 Broadband Tunnel: Down
 {% endif %}
+{% else %}
+Broadband Tunnel: N/A
 {% endif %}
+{% endif %}
+{% if store_internet_egress.stdout %}
 {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Internet Reachable: Yes
 {% else %}
 Internet Reachable: No
 {% endif %}
+{% else %}
+Internet Reachable: N/A
+{% endif %}
+{% if store_internet_egress.stdout %}
 {% if store_internet_egress.stdout | regex_search("asgi1", multiline=True, ignorecase=False) %}
 Internet Egress: Ashburn
 {% elif store_internet_egress.stdout | regex_search("rkat1", multiline=True, ignorecase=False)  %}
@@ -53,34 +78,66 @@ Internet Egress: Sacramento
 {% else %}
 Internet Egress: Unknown
 {% endif %}
+{% else %}
+Internet Egress: N/A
+{% endif %}
+{% if store_switch_dns_test.stdout %}
 {% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
 DNS Resolution Functional: Yes
 {% else %}
 DNS Resolution Functional: No
 {% endif %}
+{% else %}
+DNS Resolution Functional: N/A
+{% endif %}
+{% if store_switch_connect_ws_site.stdout %}
 {% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Williams Sonoma Site (www.williams-sonoma.com) Reachable: Yes
 {% else %}
 Williams Sonoma Site (www.williams-sonoma.com) Reachable: No
 {% endif %}
+{% else %}
+Williams Sonoma Site (www.williams-sonoma.com) Reachable: N/A
+{% endif %}
+{% if store_switch_connect_storesweb.stdout %}
 {% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: Yes
 {% else %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: No
 {% endif %}
+{% else %}
+Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: N/A
+{% endif %}
+{% if store_switch_connect_verifone.stdout %}
 {% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Verifone API (api.vfipayna.com) Reachable: Yes
 {% else %}
 Verifone API (api.vfipayna.com) Reachable: No
 {% endif %}
+{% else %}
+Verifone API (api.vfipayna.com) Reachable: N/A
+{% endif %}
 Verifone active firewall sessions:
+{% if active_verifone_sessions_ashburn.stdout_lines is defined %}
   Ashburn: {{ active_verifone_sessions_ashburn.stdout_lines | length - 1 }}
+{% else %}
+  Ashburn: N/A
+{% endif %}
+{% if active_verifone_sessions_rocklin.stdout_lines is defined %}
   Rocklin: {{ active_verifone_sessions_rocklin.stdout_lines | length - 1 }}
+{% else %}
+  Rocklin: N/A
+{% endif %}
+{% if active_verifone_sessions_sacramento.stdout_lines is defined %}
   Sacramento: {{ active_verifone_sessions_sacramento.stdout_lines | length - 1 }}
+{% else %}
+  Sacramento: N/A
+{% endif %}
 
 
 ##### Rocklin MPLS Router: Store Switch Reachability ##############################
 
+{% if store_switch_ping.stdout_lines %}
 {% for item in store_switch_ping.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -91,10 +148,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Store Switch: Uptime ##############################
 
+{% if store_switch_uptime.stdout_lines %}
 {% for item in store_switch_uptime.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -105,10 +166,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Rocklin MPLS Router: Store Router Reachability ##############################
 
+{% if store_router_ping.stdout_lines %}
 {% for item in store_router_ping.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -119,10 +184,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Rocklin MPLS Router: Store POS Subnet in Route Table ##############################
 
+{% if store_subnet_lookup.stdout_lines %}
 {% for item in store_subnet_lookup.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -133,11 +202,15 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 {% if not sdwan_store %}
 ##### Rocklin MPLS Router: Store Broadband VPN Tunnel Status ##############################
 
+{% if store_bb_tunnel_status.stdout_lines %}
 {% for item in store_bb_tunnel_status.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -148,11 +221,15 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 {% endif %}
 ##### Store Switch: Internet Path ##############################
 
+{% if store_internet_egress.stdout_lines %}
 {% for item in store_internet_egress.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -163,10 +240,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Store Switch: DNS Resolution ##############################
 
+{% if store_switch_dns_test.stdout_lines %}
 {% for item in store_switch_dns_test.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -177,10 +258,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Store Switch: Connect to www.williams-sonoma.com ##############################
 
+{% if store_switch_connect_ws_site.stdout_lines %}
 {% for item in store_switch_connect_ws_site.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -191,10 +276,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Store Switch: Connect to Store Wide Web ##############################
 
+{% if store_switch_connect_storesweb.stdout_lines %}
 {% for item in store_switch_connect_storesweb.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -205,10 +294,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Store Switch: Connect to Verifone ##############################
 
+{% if store_switch_connect_verifone.stdout_lines %}
 {% for item in store_switch_connect_verifone.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -219,10 +312,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Ashburn Verifone Connections ##############################
 
+{% if active_verifone_sessions_ashburn.stdout_lines is defined %}
 {% for item in active_verifone_sessions_ashburn.stdout_lines %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -233,10 +330,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Rocklin Verifone Connections ##############################
 
+{% if active_verifone_sessions_rocklin.stdout_lines is defined %}
 {% for item in active_verifone_sessions_rocklin.stdout_lines %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -247,10 +348,14 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 
 ##### Sacramento Verifone Connections ##############################
 
+{% if active_verifone_sessions_sacramento.stdout_lines is defined %}
 {% for item in active_verifone_sessions_sacramento.stdout_lines %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -261,11 +366,15 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 
 {% if not sdwan_store %}
 
 ##### Rocklin MPLS Router: Store Broadband VPN Tunnels Down ##############################
 
+{% if store_vpn_down_count.stdout_lines %}
 {% for item in store_vpn_down_count.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -278,4 +387,7 @@ Verifone active firewall sessions:
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
 {% endif %}
