--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -15,7 +15,7 @@ Mist Wireless: {% if mist_store %}Yes{% else %}No{% endif +%}
 ##### Store Analysis ##############################
 
 Store Switch:
-{% if store_switch_ping.stdout | default("") %}
+{% if not store_switch_ping.stderr | default("failed") %}
 {% if store_switch_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
   Pingable: Yes
 {% else %}
@@ -24,13 +24,13 @@ Store Switch:
 {% else %}
   Pingable: N/A
 {% endif %}
-{% if store_switch_uptime.stdout_lines | default([]) %}
+{% if not store_switch_uptime.stderr | default("failed") %}
   Uptime: {{ store_switch_uptime.stdout_lines[5] | regex_replace("^.+uptime is ", "") }}
 {% else %}
   Uptime: N/A
 {% endif %}
 Store Router:
-{% if store_router_ping.stdout | default("") %}
+{% if not store_router_ping.stderr | default("failed") %}
 {% if store_router_ping.stdout | regex_search("Success rate is [1-9]", multiline=True, ignorecase=False) %}
   Pingable: Yes
 {% else %}
@@ -39,7 +39,7 @@ Store Router:
 {% else %}
   Pingable: N/A
 {% endif %}
-{% if store_subnet_lookup.stdout_lines | default([]) %}
+{% if not store_subnet_lookup.stderr | default("failed") %}
 {% if store_subnet_lookup.stdout_lines[5] | regex_search(store_subnet, multiline=False, ignorecase=False) %}
 MPLS Path: Up
 {% else %}
@@ -49,7 +49,7 @@ MPLS Path: Down
 MPLS Path: N/A
 {% endif %}
 {% if not sdwan_store %}
-{% if store_bb_tunnel_status.stdout | default("") %}
+{% if not store_bb_tunnel_status.stderr | default("failed") %}
 {% if store_bb_tunnel_status.stdout | regex_search("prefixes\s[1-9]\d*\s*$", multiline=True, ignorecase=False) %}
 Broadband Tunnel: Up
 {% else %}
@@ -86,7 +86,7 @@ SD-WAN Tunnels:
   Rocklin Hub 2: N/A
 {% endif %}
 {% endif %}
-{% if store_internet_egress.stdout | default("") %}
+{% if not store_internet_egress.stderr | default("failed") %}
 {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Internet Reachable: Yes
 {% else %}
@@ -95,7 +95,7 @@ Internet Reachable: No
 {% else %}
 Internet Reachable: N/A
 {% endif %}
-{% if store_internet_egress.stdout | default("") %}
+{% if not store_internet_egress.stderr | default("failed") %}
 {% if store_internet_egress.stdout | regex_search("asgi1", multiline=True, ignorecase=False) %}
 Internet Egress: Ashburn
 {% elif store_internet_egress.stdout | regex_search("rkat1", multiline=True, ignorecase=False)  %}
@@ -108,7 +108,7 @@ Internet Egress: Unknown
 {% else %}
 Internet Egress: N/A
 {% endif %}
-{% if store_switch_dns_test.stdout | default("") %}
+{% if not store_switch_dns_test.stderr | default("failed") %}
 {% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
 DNS Resolution Functional: Yes
 {% else %}
@@ -117,7 +117,7 @@ DNS Resolution Functional: No
 {% else %}
 DNS Resolution Functional: N/A
 {% endif %}
-{% if store_switch_connect_ws_site.stdout | default("") %}
+{% if not store_switch_connect_ws_site.stderr | default("failed") %}
 {% if store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Williams Sonoma Site (williams-sonoma.com) Reachable: Yes
 {% else %}
@@ -126,7 +126,7 @@ Williams Sonoma Site (williams-sonoma.com) Reachable: No
 {% else %}
 Williams Sonoma Site (williams-sonoma.com) Reachable: N/A
 {% endif %}
-{% if store_switch_connect_storesweb.stdout | default("") %}
+{% if not store_switch_connect_storesweb.stderr | default("failed") %}
 {% if store_switch_connect_storesweb.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: Yes
 {% else %}
@@ -135,7 +135,7 @@ Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: No
 {% else %}
 Store Wide Web Site ({{ storesweb_fqdn }} ) Reachable: N/A
 {% endif %}
-{% if store_switch_connect_verifone.stdout | default("") %}
+{% if not store_switch_connect_verifone.stderr | default("failed") %}
 {% if store_switch_connect_verifone.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Verifone API (api.vfipayna.com) Reachable: Yes
 {% else %}
@@ -145,17 +145,17 @@ Verifone API (api.vfipayna.com) Reachable: No
 Verifone API (api.vfipayna.com) Reachable: N/A
 {% endif %}
 Verifone active firewall sessions:
-{% if active_verifone_sessions_ashburn.stdout_lines | default([]) %}
+{% if not active_verifone_sessions_ashburn.stderr | default("failed") %}
   Ashburn: {{ active_verifone_sessions_ashburn.stdout_lines | length - 1 }}
 {% else %}
   Ashburn: N/A
 {% endif %}
-{% if active_verifone_sessions_rocklin.stdout_lines | default([]) %}
+{% if not active_verifone_sessions_rocklin.stderr | default("failed") %}
   Rocklin: {{ active_verifone_sessions_rocklin.stdout_lines | length - 1 }}
 {% else %}
   Rocklin: N/A
 {% endif %}
-{% if active_verifone_sessions_sacramento.stdout_lines | default([]) %}
+{% if not active_verifone_sessions_sacramento.stderr | default("failed") %}
   Sacramento: {{ active_verifone_sessions_sacramento.stdout_lines | length - 1 }}
 {% else %}
   Sacramento: N/A
@@ -164,7 +164,7 @@ Verifone active firewall sessions:
 
 ##### Rocklin MPLS Router: Store Switch Reachability ##############################
 
-{% if store_switch_ping.stdout_lines | default([]) %}
+{% if not store_switch_ping.stderr | default("failed") %}
 {% for item in store_switch_ping.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -182,7 +182,7 @@ N/A
 
 ##### Store Switch: Uptime ##############################
 
-{% if store_switch_uptime.stdout_lines | default([]) %}
+{% if not store_switch_uptime.stderr | default("failed") %}
 {% for item in store_switch_uptime.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -200,7 +200,7 @@ N/A
 
 ##### Rocklin MPLS Router: Store Router Reachability ##############################
 
-{% if store_router_ping.stdout_lines | default([]) %}
+{% if not store_router_ping.stderr | default("failed") %}
 {% for item in store_router_ping.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -218,7 +218,7 @@ N/A
 
 ##### Rocklin MPLS Router: Store POS Subnet in Route Table ##############################
 
-{% if store_subnet_lookup.stdout_lines | default([]) %}
+{% if not store_subnet_lookup.stderr | default("failed") %}
 {% for item in store_subnet_lookup.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -264,7 +264,7 @@ N/A
 {% if not sdwan_store %}
 ##### Rocklin MPLS Router: Store Broadband VPN Tunnel Status ##############################
 
-{% if store_bb_tunnel_status.stdout_lines | default([]) %}
+{% if not store_bb_tunnel_status.stderr | default("failed") %}
 {% for item in store_bb_tunnel_status.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -283,7 +283,7 @@ N/A
 {% endif %}
 ##### Store Switch: Internet Path ##############################
 
-{% if store_internet_egress.stdout_lines | default([]) %}
+{% if not store_internet_egress.stderr | default("failed") %}
 {% for item in store_internet_egress.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -301,7 +301,7 @@ N/A
 
 ##### Store Switch: DNS Resolution ##############################
 
-{% if store_switch_dns_test.stdout_lines | default([]) %}
+{% if not store_switch_dns_test.stderr | default("failed") %}
 {% for item in store_switch_dns_test.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -319,7 +319,7 @@ N/A
 
 ##### Store Switch: Connect to www.williams-sonoma.com ##############################
 
-{% if store_switch_connect_ws_site.stdout_lines | default([]) %}
+{% if not store_switch_connect_ws_site.stderr | default("failed") %}
 {% for item in store_switch_connect_ws_site.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -337,7 +337,7 @@ N/A
 
 ##### Store Switch: Connect to Store Wide Web ##############################
 
-{% if store_switch_connect_storesweb.stdout_lines | default([]) %}
+{% if not store_switch_connect_storesweb.stderr | default("failed") %}
 {% for item in store_switch_connect_storesweb.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -355,7 +355,7 @@ N/A
 
 ##### Store Switch: Connect to Verifone ##############################
 
-{% if store_switch_connect_verifone.stdout_lines | default([]) %}
+{% if not store_switch_connect_verifone.stderr | default("failed") %}
 {% for item in store_switch_connect_verifone.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -373,7 +373,7 @@ N/A
 
 ##### Ashburn Verifone Connections ##############################
 
-{% if active_verifone_sessions_ashburn.stdout_lines | default([]) %}
+{% if not active_verifone_sessions_ashburn.stderr | default("failed") %}
 {% for item in active_verifone_sessions_ashburn.stdout_lines %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -391,7 +391,7 @@ N/A
 
 ##### Rocklin Verifone Connections ##############################
 
-{% if active_verifone_sessions_rocklin.stdout_lines | default([]) %}
+{% if not active_verifone_sessions_rocklin.stderr | default("failed") %}
 {% for item in active_verifone_sessions_rocklin.stdout_lines %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -409,7 +409,7 @@ N/A
 
 ##### Sacramento Verifone Connections ##############################
 
-{% if active_verifone_sessions_sacramento.stdout_lines | default([]) %}
+{% if not active_verifone_sessions_sacramento.stderr | default("failed") %}
 {% for item in active_verifone_sessions_sacramento.stdout_lines %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
@@ -428,7 +428,7 @@ N/A
 
 ##### Rocklin MPLS Router: Store Broadband VPN Tunnels Down ##############################
 
-{% if store_vpn_down_count.stdout_lines | default([]) %}
+{% if not store_vpn_down_count.stderr | default("failed") %}
 {% for item in store_vpn_down_count.stdout_lines[4:-4] %}
 {# Strip ASCII control characters #}
 {% set item = item | regex_replace("[^\x20-\x7e]", "") %}
