--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -86,6 +86,48 @@ SD-WAN Tunnels:
   Rocklin Hub 2: N/A
 {% endif %}
 {% endif %}
+{% if mist_store %}
+Mist Wireless:
+{% if mist_site_stats.json | default("") %}
+  Site: {{ mist_site_stats.json.name }}
+  Connected APs: {{ mist_site_stats.json.num_ap_connected }}/{{ mist_site_stats.json.num_ap }}
+  Connected Clients: {{ mist_site_stats.json.num_clients }}
+{% else %}
+  Site: N/A
+  Connected APs: N/A
+  Connected Clients: N/A
+{% endif %}
+{% if mist_wlans.json | default("") %}
+  SSIDs:
+{% for wlan in mist_wlans.json %}
+    {{ wlan.ssid }}:
+      Enabled: {% if wlan.enabled %}Yes{% else %}No{% endif +%}
+      Connected Clients: {{ mist_client_stats.json | selectattr('ssid', 'match', wlan.ssid) | length }}
+{% endfor %}
+{% set rssi =  mist_client_stats.json | map(attribute='rssi') | sort %}
+  RSSI:
+    Best: {{ rssi[-1] }}
+    Worst: {{ rssi[0] }}
+    Median: {{ rssi[rssi | length // 2] }}
+    Top 5 Worst:
+{% for c in (mist_client_stats.json | sort(attribute="rssi"))[:5] %}
+{% if c.hostname | default("") and c.hostname | default("") != "\"\"" %}
+      {{ c.ip }} ({{ c.hostname }}):
+{% else %}
+      {{ c.ip }}:
+{% endif %}
+        RSSI: {{ c.rssi }}
+        SNR: {{ c.snr }}
+        SSID: {{ c.ssid }}
+        Channel: {{ c.channel }}
+        MAC Address: {{ c.mac }}
+        Username: {{ c.username | default("") }}
+{% endfor %}
+{% else %}
+  SSIDs: N/A
+  RSSI: N/A
+{% endif %}
+{% endif %}
 {% if not store_internet_egress.stderr | default("failed") %}
 {% if store_internet_egress.stdout | regex_search("8.8.8.8.+msec", multiline=True, ignorecase=False) or store_switch_connect_ws_site.stdout | regex_search("Open", multiline=True, ignorecase=False) %}
 Internet Reachable: Yes
@@ -234,6 +276,7 @@ N/A
 {% endif %}
 
 
+{% if sdwan_store %}
 #### SD-WAN: Rocklin Hub 1 BFD Sessions
 
 {% if rkat1_hub_1_sessions.json.data | default("") %}
@@ -261,6 +304,7 @@ N/A
 {% endif %}
 
 
+{% endif %}
 {% if not sdwan_store %}
 ##### Rocklin MPLS Router: Store Broadband VPN Tunnel Status ##############################
 
@@ -275,6 +319,44 @@ N/A
 {{ item }}
 {% endif %}
 {% endfor %}
+{% else %}
+N/A
+{% endif %}
+
+
+{% endif %}
+{% if mist_store %}
+#### Mist: Sites
+
+{% if mist_sites.json | default("") %}
+{{ mist_sites.json | ansible.builtin.to_nice_json }}
+{% else %}
+N/A
+{% endif %}
+
+
+#### Mist: Site Stats
+
+{% if mist_site_stats.json | default("") %}
+{{ mist_site_stats.json | ansible.builtin.to_nice_json }}
+{% else %}
+N/A
+{% endif %}
+
+
+#### Mist: Client Stats
+
+{% if mist_client_stats.json | default("") %}
+{{ mist_client_stats.json | ansible.builtin.to_nice_json }}
+{% else %}
+N/A
+{% endif %}
+
+
+#### Mist: WLANs
+
+{% if mist_wlans.json | default("") %}
+{{ mist_wlans.json | ansible.builtin.to_nice_json }}
 {% else %}
 N/A
 {% endif %}
