--- a/playbooks/templates/snow_attach_store_diagnostic_report.j2
+++ b/playbooks/templates/snow_attach_store_diagnostic_report.j2
@@ -277,7 +277,7 @@ N/A
 
 
 {% if sdwan_store %}
-#### SD-WAN: Rocklin Hub 1 BFD Sessions
+##### SD-WAN: Rocklin Hub 1 BFD Sessions
 
 {% if rkat1_hub_1_sessions.json.data | default("") %}
 {{ rkat1_hub_1_sessions.json.data | ansible.builtin.to_nice_json }}
@@ -286,7 +286,7 @@ N/A
 {% endif %}
 
 
-#### SD-WAN: Rocklin Hub 2 BFD Sessions
+##### SD-WAN: Rocklin Hub 2 BFD Sessions
 
 {% if rkat1_hub_2_sessions.json.data | default("") %}
 {{ rkat1_hub_2_sessions.json.data | ansible.builtin.to_nice_json }}
@@ -295,7 +295,7 @@ N/A
 {% endif %}
 
 
-#### SD-WAN: Ashburn Hub 1 BFD Sessions
+##### SD-WAN: Ashburn Hub 1 BFD Sessions
 
 {% if asbc1_hub_1_sessions.json.data | default("") %}
 {{ asbc1_hub_1_sessions.json.data | ansible.builtin.to_nice_json }}
@@ -326,7 +326,7 @@ N/A
 
 {% endif %}
 {% if mist_store %}
-#### Mist: Sites
+##### Mist: Sites
 
 {% if mist_sites.json | default("") %}
 {{ mist_sites.json | ansible.builtin.to_nice_json }}
@@ -335,7 +335,7 @@ N/A
 {% endif %}
 
 
-#### Mist: Site Stats
+##### Mist: Site Stats
 
 {% if mist_site_stats.json | default("") %}
 {{ mist_site_stats.json | ansible.builtin.to_nice_json }}
@@ -344,7 +344,7 @@ N/A
 {% endif %}
 
 
-#### Mist: Client Stats
+##### Mist: Client Stats
 
 {% if mist_client_stats.json | default("") %}
 {{ mist_client_stats.json | ansible.builtin.to_nice_json }}
@@ -353,7 +353,7 @@ N/A
 {% endif %}
 
 
-#### Mist: WLANs
+##### Mist: WLANs
 
 {% if mist_wlans.json | default("") %}
 {{ mist_wlans.json | ansible.builtin.to_nice_json }}
